# BadAPI

./: .gitignore  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: ci.yml
cmake/: async-logger.cmake  gtav-classes.cmake  imgui.cmake  imguitextselect.cmake  libarchive.cmake  luajit.cmake  minhook.cmake  utfcpp.cmake  version.cmake  zlib.cmake
docs/lua/: types.lua
docs/luals/: types.lua
docs/luals/classes/: LogMessage.lua  internal_script.lua  text_select.lua
docs/luals/natives/: lua_native_binding_APP.lua  lua_native_binding_AUDIO.lua  (+43 more)
scripts/: gen_lua_natives.py  lua_doc_gen.py  natives_gen.py
src/: byte_patch_manager.cpp  common.hpp  function_types.hpp  gta_util.hpp  main.cpp  natives.hpp  packet.cpp  pointers.cpp  script_function.hpp  version.cpp  version.cpp.in  version.hpp
src/backend/: backend.cpp  byte_patch_manager.cpp  script_patches.hpp
src/core/: enums.hpp  settings.hpp
src/gta/: blip.hpp  datBitBuffer.hpp  enums.hpp  fidevice.cpp  fidevice.hpp  function_types.hpp  fwddec.hpp  gta_util.hpp  joaat.hpp  netPlayer.hpp  net_game_event.hpp  net_object_mgr.hpp  packet.cpp  packet.hpp  pickup_rewards.hpp  pointers.cpp  pointers.hpp  pools.hpp  script_handler.cpp  tls_context.hpp
src/gui/: gui.cpp  gui.hpp
src/hooking/: detour_hook.cpp  hooking.cpp  hooking.hpp
src/logger/: logger.hpp  stack_trace.cpp
src/lua/: lua_manager.cpp  lua_manager.hpp  lua_module.cpp  lua_module.hpp  lua_patch.cpp  sol.hpp  sol_include.hpp
src/memory/: batch.cpp  batch.hpp  module.cpp
src/native_hooks/: all_scripts.hpp  native_hooks.cpp
src/renderer/: renderer.cpp  renderer.hpp  renderer_dx11.cpp  renderer_dx11.hpp  renderer_dx12.cpp  renderer_dx12.hpp
src/util/: dll_hijacking.hpp  entity.cpp  entity.hpp  filesystem.cpp  filesystem.hpp  math.hpp  old_style_script_event.hpp  pools.hpp  scripts.hpp  world_model.hpp
src/views/: view.hpp
(+156 files in other folders)
